[package]
name = "estop"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
elasticsearch = "8.15.0-alpha.1"
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.2"
http = "1.1.0"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
directories = "5.0.1"
ordermap = "0.5.3"
itertools = "0.13.0"
humansize = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1